clipPath does not work on foreignObject https://bugs.webkit.org/show_bug.cgi?id=68251

Patch by Florin Malita <fmalita@google.com> on 2011-11-11
Reviewed by Dirk Schulze.

Source/WebCore:

Add ForeignObject clipping, filtering and masking support using the SVGRenderSupport helpers
(prepareToRenderSVGContent, finishRenderSVGContent) on RenderSVGForeignObject's paint path.
This also allows us to remove explicit transparency handling, since the helpers already cover it.

Tests: svg/foreignObject/clip.html
       svg/foreignObject/filter.html
       svg/foreignObject/mask.html

* rendering/svg/RenderSVGForeignObject.cpp:
(WebCore::RenderSVGForeignObject::paint):
* rendering/svg/SVGResources.cpp:
(WebCore::clipperFilterMaskerTags):

LayoutTests:

* svg/foreignObject/clip-expected.png: Added.
* svg/foreignObject/clip-expected.txt: Added.
* svg/foreignObject/clip.html: Added.
* svg/foreignObject/filter-expected.png: Added.
* svg/foreignObject/filter-expected.txt: Added.
* svg/foreignObject/filter.html: Added.
* svg/foreignObject/mask-expected.png: Added.
* svg/foreignObject/mask-expected.txt: Added.
* svg/foreignObject/mask.html: Added.

Canonical link: https://commits.webkit.org/88602@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@100045 268f45cc-cd09-0410-ab3c-d52691b4dbfc